# pybind11-cuda

./: .gitignore  CMakeCache.txt  CMakeLists.txt  test_mul.py
.devcontainer/: README.md  cuda.dockerfile  devcontainer.json  devcontainer_xavier.json  pico.dockerfile  xavier.dockerfile
old/: checker.cpp
src/: gpu_library.cu
src/crclib/: CMakeLists.txt  crc.cu  crc_cpp.cpp  crc_cpp.hpp  crc_cuda.cu  crc_cuda.cuh  crcfuncs.cpp  crcfuncs.cu  cutest.cu
src/cudalib/: CMakeLists.txt  bind.cpp  cupy_example.cu  git_example.cu  gpu_library.cu  kernels.cu  kernels.cuh
src/pystuff/: conf.py  crc.py  sample.pickle  test_mul.py  testing.py  timing.py
src/pystuff/__pycache__/: crc.check_all_jited-101.py310.1.nbc  crc.check_all_jited-101.py310.nbi
